# cub-cpp-ta-assessment

./: CMakeLists.txt  README.md
src/: any.h  any.hpp  has-rtti.h  test.cpp
